--- a/certificado.html
+++ b/certificado.html
@@ -26,9 +26,9 @@
             </div>
 
             <div class="main-text">
-                <span class="placeholder-line" style="width: 450px;">Nombre y apellido</span>
+                <span class="placeholder-line" style="width: 450px;">Petroaie Lucas </span>
                 <br>
-                se encuentra aprendiendo la tecnología:
+                se encuentra aprendiendo la tecnología:Git-Github
                 <br>
                 <span class="course-details placeholder-line">Git y Github</span>
                 mediante ejercicios prácticos y prácticas guiadas.
