Commit 3: ajustes de contenido o mejoras visuales

--- a/certificado.html
+++ b/certificado.html
@@ -36,7 +36,7 @@
             </div>
             
             <div class="unofficial-badge">
-                Documento NO OFICIAL
+                Documento SUPER OFICIAL
             </div>
         </div>
     </div>
