Mi mejora terminada

--- a/certificado.html
+++ b/certificado.html
@@ -36,7 +36,7 @@
             </div>
             
             <div class="unofficial-badge">
-                Documento SUPER OFICIAL
+                Documento SUPER OFICIAL...o no?
             </div>
         </div>
     </div>
