Agregando una mejora visual

--- a/certificado.html
+++ b/certificado.html
@@ -64,5 +64,6 @@
             certificado.style.transform = 'rotateX(0) rotateY(0)';
         });
     </script>
+    <h2>Proyecto Finalizado</h2>
 </body>
 </html>
