--- a/certificado.html
+++ b/certificado.html
@@ -65,5 +65,13 @@
         });
     </script>
     <h2>Proyecto Finalizado</h2>
+    <style>
+  h2{
+    color: green;
+     font-family: 'Times New Roman', serif;
+  }
+</style>
+
+
 </body>
 </html>
